--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <html lang="en">
 <head>
-	<title>Engineering Homework (Important)</title>
+	<title>Thank You Mr. Anasco! :)</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
